lang/examples/good/09_przesłanianie_i_statyczne_wiązanie.gt
fn main() -> int {
    const n = 10;

    {
        var n = "hmm";
        print(n, ' ');
        n = "...";
    }
    print(n, '\n');

    return 0;
}
