lang/examples/bad/NotAFunction.gt
fn main() -> int {
    var x = 1;
    x();
    return 0;
}
